# ashborn

./: .gitignore  .vercelignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WALLET_INTEGRATION_COMPLETE.md  WALLET_INTEGRATION_GUIDE.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vercel.json
.amazonq/rules/: frontend-design.md  memory-system.md  superpower.md
app/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/public/: site.webmanifest
app/public/circuits/: shield.wasm  shield_0000.zkey  shield_vkey.json  transfer.wasm
app/scripts/: verify-shadow.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/agent/: route.ts
app/src/app/api/ashborn/: route.ts
app/src/app/api/debug-env/: route.ts
app/src/app/api/privacycash/: route.ts
app/src/app/api/rate-limit/: route.ts
app/src/app/api/shadow-architect/: route.ts
app/src/app/demo/: layout.tsx  page.tsx
app/src/app/demo/ai-lending/: page.tsx
app/src/app/demo/ai-payment/: page.tsx
app/src/app/docs/: dummy.tsx  page.tsx
app/src/components/: ComplianceProof.tsx  Providers.tsx  ShadowVault.tsx  ShieldFlow.tsx  SimpleMode.tsx  TransferFlow.tsx
app/src/components/demo/: ChatUI.tsx  DemoButton.tsx  DemoLayout.tsx  DemoPageHeader.tsx  InfoCard.tsx  PrivacyVisualizer.tsx  TerminalComponents.tsx  TxLink.tsx  index.ts
app/src/components/docs/: UseCaseFlows.tsx
app/src/components/landing/: CinematicHero.tsx  Comparison.tsx  GuildAlliance.tsx  Hero.tsx  HowAshbornWorks.tsx  LiquidHero.tsx  MarketingArsenal.tsx  MarketingWhy.tsx  ParallaxHero.tsx  PrivacyRelayShowcase.tsx  ProtectionFeed.tsx  ShadowAgentHighlight.tsx  ShadowECDHShowcase.tsx  SkillCombo.tsx  SystemCapabilities.tsx  SystemWarning.tsx
app/src/components/providers/: Providers.tsx
app/src/components/ui/: AsciiArt.tsx  ClientWalletButton.tsx  CodeBlock.tsx  DataAvatar.tsx  MagicCircle.tsx  MonarchAmbience.tsx  NavigationProgress.tsx  ParallaxBackground.tsx  PortalTransition.tsx  PoweredBySolana.tsx  RadarChart.tsx  ScrambleText.tsx  ShadowCursor.tsx  ShadowSwarm.tsx  SlashSection.tsx  SystemHUD.tsx  SystemToast.tsx  SystemWindow.tsx  TerminalBlock.tsx
app/src/context/: AshbornContext.tsx
app/src/hooks/: useAshborn.ts  useDemoStatus.ts
app/src/lib/: rateLimiter.ts
app/src/styles/: nprogress.css
app/src/types/: hugeicons.d.ts  privacycash.d.ts
circuits/: convert_vk.js  package-lock.json  package.json
docs/: DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEVNET_LIMITATIONS.md  HACKATHON_TIPS.md  LOCAL_DEVELOPMENT.md  SDK_GUIDE.md
programs/ashborn/: Cargo.toml
programs/ashborn/src/: errors.rs  lib.rs  tests.rs
programs/ashborn/src/instructions/: initialize.rs  mod.rs  reveal.rs  shield.rs  transfer.rs  unshield.rs
programs/ashborn/src/state/: merkle.rs  mod.rs  notes.rs  nullifier.rs  protocol.rs  rate_limit.rs  vault.rs
programs/ashborn/src/zk/: mod.rs  poseidon.rs  verifier.rs  vkeys.rs  vkeys_generated.rs
scripts/: check-alt.ts  check-program.ts  demo.sh  deploy-devnet.sh  deploy.sh  optimize_icons.js  setup-alt.ts
sdk/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/src/: ashborn.ts  circuits.ts  compliance.ts  constants.ts  decoys.ts  helius.ts  index.ts  indexer.ts  integrations.ts  keystore.ts  nft.ts  privacycash-official.ts  privacycash.ts  relay.ts  relayer.ts  security.ts  shadowwire.ts  stealth.ts  tor.ts  types.ts  utils.ts  zk.ts
sdk/src/crypto/: index.ts
sdk/src/nlp/: index.ts
sdk/tests/: setup.ts
sdk/tests/e2e/: agent.test.ts  full-flow.test.ts  multi-user.test.ts
sdk/tests/integration/: compliance.test.ts  shield.test.ts  transfer.test.ts  unshield.test.ts
sdk/tests/unit/: compliance.test.ts  crypto.test.ts  helius.test.ts  nlp.test.ts  shadowwire.test.ts
tests/: ashborn.ts
(+31 files in other folders)
