[package]
name = "ashborn"
version = "0.2.0"
description = "The Shadow Monarch of Crypto Privacy - Production-grade privacy layer on Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/ashborn"

[lib]
crate-type = ["cdylib", "lib"]
name = "ashborn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"

# ZK Verification (Anatoly-approved)
groth16-solana = "0.0.3"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"

# Crypto primitives (Vitalik-approved)
light-poseidon = "0.2"
sha2 = "0.10"
blake3 = "1.5"

# Merkle tree for nullifiers
light-merkle-tree = "0.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
