[package]
name = "ashborn"
version = "0.2.0"
description = "The Shadow Monarch of Crypto Privacy - Production-grade privacy layer on Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/ashborn"

[lib]
crate-type = ["cdylib", "lib"]
name = "ashborn"

[profile.release]
overflow-checks = false
lto = "fat"
codegen-units = 1
strip = true

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

# ZK Verification (Anatoly-approved)
# Disable default features to avoid 'rayon' (multithreading) stack overflows
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }

# Real Groth16 verification using Solana's Alt_bn128 syscalls (Toly-approved)
groth16-solana = "0.0.3"

# Crypto primitives (Vitalik-approved)
light-poseidon = "0.1"
sha2 = "0.10"
blake3 = "=1.5.0"
base64ct = "=1.6.0"
constant_time_eq = "=0.3.0"
indexmap = "=2.2.6"
hashbrown = "=0.14.3"
rayon = "=1.10.0"
rayon-core = "=1.12.1"

# Merkle tree for nullifiers
light-merkle-tree = "0.1"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1", features = ["full"] }
